k8s/01-base/ngrok-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  namespace: faces
  name: faces-demo
  annotations:
    k8s.ngrok.com/modules: faces-demo
spec:
  ingressClassName: ngrok
  rules:
  - host: faces-demo-linkerd.ngrok.io
    http:
      paths:
      - path: /color/
        pathType: Prefix
        backend:
          service:
            name: color
            port:
              number: 80
      - path: /face/
        pathType: Prefix
        backend:
          service:
            name: face
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: faces-gui
            port:
              number: 80
      - path: /smiley/
        pathType: Prefix
        backend:
          service:
            name: smiley
            port:
              number: 80
